--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "twbs/bootstrap": "^5.1"
+        "twbs/bootstrap": "^5.1",
+        "components/jquery": "^3.6"
     }
 }
